Servicifying RemovableStorageWriter.

Made RemovableStorageWriter a chrome service and changed ImageWriterUtilityClient to use the
service instead of UtilityProcessMojoClient, which is being deprecated.

ImageWriterUtilityClient now requires a service_manager::Connector when created. As a result,
extensions::image_writer::Operation which creates an ImageWriterUtilityClient and all its
derived classes now also take a connector.

Bug: 790024
Change-Id: Ie31c123e189ccd0134f9fc63a5dd7238011bebca