chrome/browser/extensions/api/image_writer_private/image_writer_utility_client.h
@@ -7,13 +7,18 @@
 
 #include <stdint.h>
 
+#include <memory>
+
 #include "base/callback.h"
 #include "base/files/file_path.h"
 #include "base/macros.h"
 #include "base/memory/ref_counted.h"
 #include "base/sequence_checker.h"
-#include "chrome/common/extensions/removable_storage_writer.mojom.h"
-#include "content/public/browser/utility_process_mojo_client.h"
+#include "chrome/services/removable_storage_writer/public/interfaces/removable_storage_writer.mojom.h"
+
+namespace service_manager {
+class Connector;
+}
 
 namespace extensions {
 namespace image_writer {
@@ -30,7 +35,8 @@ class ImageWriterUtilityClient
   using ImageWriterUtilityClientFactory =
       base::Callback<scoped_refptr<ImageWriterUtilityClient>()>;
 
-  static scoped_refptr<ImageWriterUtilityClient> Create();
+  static scoped_refptr<ImageWriterUtilityClient> Create(
+      std::unique_ptr<service_manager::Connector> connector);
 
   static void SetFactoryForTesting(ImageWriterUtilityClientFactory* factory);
 
@@ -70,13 +76,14 @@ class ImageWriterUtilityClient
   friend class base::RefCountedThreadSafe<ImageWriterUtilityClient>;
   friend class ImageWriterUtilityClientTest;
 
-  ImageWriterUtilityClient();
+  explicit ImageWriterUtilityClient(
+      std::unique_ptr<service_manager::Connector> connector);
   virtual ~ImageWriterUtilityClient();
 
  private:
   class RemovableStorageWriterClientImpl;
 
-  void StartUtilityProcessIfNeeded();
+  void BindServiceIfNeeded();
   void UtilityProcessError();
 
   void OperationProgress(int64_t progress);
@@ -89,12 +96,11 @@ class ImageWriterUtilityClient
   SuccessCallback success_callback_;
   ErrorCallback error_callback_;
 
-  std::unique_ptr<content::UtilityProcessMojoClient<
-      extensions::mojom::RemovableStorageWriter>>
-      utility_process_mojo_client_;
-
   std::unique_ptr<RemovableStorageWriterClientImpl>
       removable_storage_writer_client_;
+
+  std::unique_ptr<service_manager::Connector> connector_;
+  chrome::mojom::RemovableStorageWriterPtr removable_storage_writer_;
 
   SEQUENCE_CHECKER(sequence_checker_);
 
